fix parser.less: variable @text-color-secondary is undefined

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -1,4 +1,6 @@
 /* ======= Base ======= */
+@import 'mixins.less';
+@import 'theme-default.less';
 body {
     font-family: 'Roboto', sans-serif;  
     color: @text-color-secondary;
