--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -6,6 +6,9 @@
  * License: Creative Commons Attribution 3.0 License
  * Website: http://themes.3rdwavemedia.com/
 */
+.test-autprefixer{
+  display: flex;
+}
 @import 'mixins.less';
 @import 'theme-default.less';
 @import 'base.less';
