--- a/src/views/index.html
+++ b/src/views/index.html
@@ -227,6 +227,7 @@
 <script type="text/javascript" src="../plugins/bootstrap/js/bootstrap.min.js"></script>
 <!-- custom js -->
 <script type="text/javascript" src="../js/main.js"></script>
+<script type="text/javascript" src="../js/b.js"></script>
 </body>
 </html>
 
